# adaptive_viewpt_dual_arm

./: .gitignore  README.md
adaptive_viewpoint/: CMakeLists.txt  package.xml
adaptive_viewpoint/scripts/: adaptive_viewpoint.py  core.py  switch_controller.py
aruco_ros/aruco/include/aruco/: marker.h
aruco_ros/aruco/src/aruco/: marker.cpp
aruco_ros/aruco_ros/: package.xml
aruco_ros/aruco_ros/launch/: single.launch  spawn_ar_tracking.launch
aruco_ros/aruco_ros/src/: simple_single.cpp
franka_panda/franka_ros/franka_description/robots/: depth.xacro  hand.xacro  panda.control.effort.xacro  panda.control.xacro  panda_arm_camera.urdf.xacro  panda_arm_hand.effort.urdf.xacro
franka_panda/panda_simulation/config/: effort_control.yaml
franka_panda/panda_simulation/launch/: dual_arm.launch
franka_panda/pick_and_place/launch/: kinect_only.launch
franka_panda/pick_and_place/scripts/: init_home_pose.py  test_ground.py
franka_panda/pick_and_place/urdf/: kinect.urdf
toy_problem/: CMakeLists.txt  README.md  package.xml
toy_problem/bags/: feat1-2.bag  feat2-1.bag
toy_problem/config/: config.yaml
toy_problem/launch/: vb_publish_joint_pose_and_vel.launch
toy_problem/scripts/: init_home_position.py  optimization_servoing.py  switch_controllers.py  visual_servoing.py
toy_problem/urdf/: robot_env.urdf  vbmbot.gazebo  vbmbot.xacro
visp_ros/tutorial/franka/coppeliasim/: tutorial-franka-coppeliasim-ibvs-apriltag.cpp
visp_ros/tutorial/franka/coppeliasim/scene/: frankaSim.ttt  frankaSimIBVS.ttt  frankaSimIBVSSimple.ttt
